fix width of about dialog title on narrow screens

--- a/src/viewer.css
+++ b/src/viewer.css
@@ -109,6 +109,11 @@
   float: right;
 }
 
+#dlgAbout .ui-title {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
 /* misc */
 
 .scrollable {
